--- a/webroot/mobile/html/myhomePage-2.html
+++ b/webroot/mobile/html/myhomePage-2.html
@@ -40,15 +40,17 @@
 				<ul class="m-lilist-des">
 					<li>
 						<i class="iconfont">&#xe660;</i>
-						<span>广东 深圳</span>
+						<span>深圳</span>
 					</li>
 					<li>
-						<i class="iconfont">&#xe671;</i>
-						<span>13865636596</span>
+						<a href="tel:8888888888">
+							<i class="iconfont">&#xe671;</i>
+							<span>13865636596</span>
+						</a>
 					</li>
 					<li>
 						<i class="iconfont">&#xe672;</i>
-						<span>380552386@qq.com</span>
+						<span>380552386666key@qq.com</span>
 					</li>
 				</ul>
 				<div class="m-tomore-bottom">
@@ -69,6 +71,7 @@
 				</div>
 				<div class="m-sub-con">
 					<section>
+						<a href="news.html">
 						<div class="m-sub-con-h">
 							<h3>天使阶段投融资指南天使阶段投融资</h3>
 						</div>
@@ -76,8 +79,10 @@
 							<p>你是一名创业者吗？你是否在寻找天使投资？你是否有这样的体会，几个大学生的项目很容易获得了几百万的投资，而在跨国公司打拼10年的你融资却处处碰壁？
 </p>
 						</div>
+						</a>
 					</section>	
 					<section>
+						<a href="news.html">
 						<div class="m-sub-con-h">
 							<h3>天使阶段投融资指南天使阶段投融资指南天使阶段投融资指南天使阶段投融资指南天使阶段投融资指南天使阶段投融资指南天使阶段投融资指南</h3>
 						</div>
@@ -85,6 +90,7 @@
 							<p>你是一名创业者吗？你是否在寻找天使投资？你是否有这样的体会，几个大学生的项目很容易获得了几百万的投资，而在跨国公司打拼10年的你融资却处处碰壁？
 </p>
 						</div>
+						</a>
 					</section>	
 				</div>
 				<!--推荐-->
