--- a/webroot/mobile/html/my-customer.html
+++ b/webroot/mobile/html/my-customer.html
@@ -31,8 +31,8 @@
 			
 				<div class="inner my-home-slidemenu" >
 					<span class="active">待付款</span>
-					<a href="#this">确认中</a>
-					<a href="#this">已完成</a>
+					<a href="#this">已确认</a>
+					<!--<a href="#this">已完成</a>-->
 				</div>
 			
 			<section class="internet-v-info nopd">
@@ -46,12 +46,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="f-box">
+				<!--<div class="f-box">
 					<div class="f-info">
 						<span class="fl f-type"><i class="iconfont">&#xe62f;</i>约见中</span>
 						<a class="fr f-link">查看<i class="iconfont">&#xe667;</i></a>
 					</div>
-				</div>
+				</div>-->
 			</section>	
 			<section class="internet-v-info nopd">
 				<div class="innercon">
@@ -64,12 +64,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="f-box">
+				<!--<div class="f-box">
 					<div class="f-info">
 						<span class="fl f-type"><i class="iconfont">&#xe62f;</i>约见中</span>
 						<a class="fr f-link">查看<i class="iconfont">&#xe667;</i></a>
 					</div>
-				</div>
+				</div>-->
 			</section>	
 			<section class="internet-v-info nopd f-complet">
 				<div class="innercon">
@@ -82,12 +82,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="f-box">
+				<!--<div class="f-box">
 					<div class="f-info">
 						<span class="fl f-type"><i class="iconfont">&#xe62f;</i>已完成</span>
 						<a class="fr f-link">查看<i class="iconfont">&#xe667;</i></a>
 					</div>
-				</div>
+				</div>-->
 			</section>	
 		</div>
 	
