--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -161,6 +161,9 @@
     window.onActiveView = function(){
         alert('pop by onActiveView');
     };
+    window.onBackView = function(){
+        alert('pop by onBackView');
+    };Back
 
 
 //    (function(){
