--- a/webroot/mobile/html/audio.html
+++ b/webroot/mobile/html/audio.html
@@ -16,72 +16,78 @@
    
 </style>  
 </head>  
-<body>  
-<div class="loadout">
+<body>
+<div class="loadout" id="audioCell">
 	<div class="m-audio">
-		<div class="audio stop" id="mc_play" onclick="play_music()">
-		<audio id="myMusic" height='1' width='1' loop="loop">
+		<div class="audio stop" onclick="play_music('audioCell', this)">
+		<audio class="myMusic" height='1' width='1' loop="loop">
 			<source src="/upload/news/mp3/2016-08-16/57b2ef22c8be3.mp3" type="audio/ogg">
 		</audio>
 	</div>
 	</div>
-	
+
 	<div class="mc_title">
 		<h3>这是一首主打歌，唱出了你和我。。。</h3>
 	</div>
-	<time><span class="cur_time">0</span>/<span class="total_time"></span></time>
-<div>  
-<script type="text/javascript">
-   
-	function play_music(){
-		
-		var audio = $('#myMusic').get(0);
-		var total = fixedSeconds(audio.duration);
-		var cur;
-		$('.total_time').html(total);
-		
-		setInterval(function(){
-			cur =  fixedSeconds(audio.currentTime);
-			$('.cur_time').html(cur);
-		},1000);
-		
-		if(audio.currentTime >= audio.duration){
-			$('#myMusic').get(0).pause();
-			 $('#mc_play').removeClass('on').addClass('stop');
-		}
-			
-		if($('#mc_play').hasClass('on')){
-			$('#myMusic').get(0).pause();
-			 $('#mc_play').removeClass('on').addClass('stop');
-		}else{
-            $('#myMusic').get(0).play();
-            $('#mc_play').removeClass('stop').addClass('on');
-        }
-	}
-	
-	function fixedSeconds(value) {
-    var theTime = parseInt(value);// s
-    var theTime1 = 0;// m
-    var theTime2 = 0;// h
-    if(theTime > 60) {
-        theTime1 = parseInt(theTime/60);
-        theTime = parseInt(theTime%60);
-            if(theTime1 > 60) {
-            theTime2 = parseInt(theTime1/60);
-            theTime1 = parseInt(theTime1%60);
-            }
-    }
-        var result = ""+parseInt(theTime);
-        if(theTime1 > 0) {
-        result = ""+parseInt(theTime1)+":"+result;
-        }
-        if(theTime2 > 0) {
-        result = ""+parseInt(theTime2)+":"+result;
-        }
-    return result;
-}
-</script>
-  
-</div>  
+	<time class="timeCell"></time>
+</div>
+
+<div class="loadout" id="audioCell2">
+	<div class="m-audio">
+		<div class="audio stop" onclick="play_music('audioCell2', this)">
+			<audio class="myMusic" height='1' width='1' loop="loop">
+				<source src="/upload/news/mp3/2016-08-16/57b2ef22c8be3.mp3" type="audio/ogg">
+			</audio>
+		</div>
+	</div>
+
+	<div class="mc_title">
+		<h3>这是一首主打歌，唱出了你和我。。。</h3>
+	</div>
+	<time class="timeCell"></time>
+</div>
+
+
+		<script type="text/javascript">
+			function fixedSeconds(value) {
+				var hs='', ms='', ss='', n = parseInt(value), h=parseInt(n/3600), m=parseInt(n/60)%60, s=parseInt(n%60);
+				hs = h>0 ? h+':' : '';
+				ms = m>0 ? (h >0&&m<10?'0':'')+m+':' : '0:';
+				ms = m==0 && h>0 ? '00:' : ms;
+				ss = s>0 ? (s<10?'0':'')+s: '00';
+				return hs+ms+ss;
+			}
+			function play_music(id, em){
+				var jid='#'+id;
+				if(!window[jid]){
+					window[jid] = {
+						timer:null,
+						audio: $(jid+' .myMusic').get(0),
+						mc_play: em
+					};
+					$(jid + ' .timeCell').html('<span class="cur_time">0</span>/<span class="total_time">'+fixedSeconds(window[jid].audio.duration)+'</span>');
+					window[jid].cur_time= $(jid+' .cur_time');
+				}
+				var audio = window[jid].audio, mc_play=window[jid].mc_play;
+
+				if(audio.currentTime >= audio.duration){
+					audio.pause();
+					mc_play.removeClass('on').addClass('stop');
+				}
+
+				if($('#mc_play').hasClass('on')){
+					audio.pause();
+					mc_play.className = 'stop';
+					clearInterval(window[jid].timer);
+				}else{
+					audio.play();
+					mc_play.className = 'on';
+					window[jid].timer = setInterval(function(){
+						cur =  fixedSeconds(audio.currentTime);
+						window[jid].cur_time.html(cur);
+					},1000);
+				}
+			}
+		</script>
 </body>  
 </html>  
