--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -25,6 +25,7 @@
     <li onclick="alert(LEMON.sys.version())">LEMON.sys.version() 当前版本号</li>
     <li onclick="alert(LEMON.sys.device())">LEMON.sys.device() 当前设备id</li>
     <li onclick="LEMON.sys.QRcode()">LEMON.sys.QRcode()扫二维码</li>
+    <li onclick="LEMON.sys.mediaPlay()">LEMON.sys.mediaPlay()开始播放多媒体</li>
     <li onclick="LEMON.login.wx(callback)">LEMON.login.wx(callback)</li>
     <li onclick="LEMON.event.invite('神啊,来下载吧 http://t.cn/RtSw8QS')">LEMON.event.invite('神啊,来下载吧')</li>
     <li onclick="LEMON.pay.wx('order_id', callback)">LEMON.pay.wx('order_id', callback)  微信支付</li>
@@ -163,7 +164,7 @@
     };
     window.onBackView = function(){
         alert('pop by onBackView');
-    };Back
+    };
 
 
 //    (function(){
