--- a/webroot/mobile/html/my-subjectlist.html
+++ b/webroot/mobile/html/my-subjectlist.html
@@ -23,13 +23,14 @@
 		</header>
 		
 		<div class="wraper">
-			<div class="h20">
+			<div class="h2">
 				
 			</div>
 			<div class="a-sj" style="display: block;">
 				<span><img src="../images/subj.png"/></span>
 				
-				<p>很抱歉，你还未<a href="#this">添加话题</a>！</p>
+				<p>很抱歉，你还未添加话题！</p>
+				<a href="#this" class="nextstep">添加话题</a>
 			</div>
 			<section style="display:none;">
 				<ul class="m-detail-box sub-list">
