--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -31,6 +31,7 @@
     <li onclick="LEMON.pay.wx('order_id', callback)">LEMON.pay.wx('order_id', callback)  微信支付</li>
     <li onclick="LEMON.pay.ali('order_id', callback)">LEMON.pay.ali('order_id', callback)阿里支付</li>
     <li onclick="LEMON.event.getLocation(callback)">LEMON.event.getLocation(callback)</li>
+    <li onclick="LEMON.event.getWXCode(callback)">LEMON.event.getWXCode(callback)</li>
     <li onclick="LEMON.event.tel(10086)">LEMON.event.tel(10086)</li>
     <li onclick="LEMON.event.uploadPhoto('\'url_query\':\'?dir=user/avatar&zip=1\'', callback)">LEMON.event.uploadPhoto("'url_query':'?dir=user/avatar&zip=1'}",callback)</li>
     <li onclick="LEMON.event.reuploadPhoto(callback)">LEMON.event.reuploadPhoto(callback)</li>
