--- a/webroot/mobile/html/checkdate.html
+++ b/webroot/mobile/html/checkdate.html
@@ -28,7 +28,7 @@
         		max-width:750px;
         		width:100%;
         		height:180px;
-        		background: #fff url(../css/img/line.png) no-repeat  0 40px;
+        		background: #fff url(../css/img/line.png) repeat-x  0 40px;
         		-webkit-transition: height .2s ease;
         		transition: height .2s ease;
         	}
