--- a/webroot/mobile/html/page.html
+++ b/webroot/mobile/html/page.html
@@ -23,7 +23,10 @@
             </p>
            
             <a onclick="return checkBrowser()" href="itms-services://?action=download-manifest&url=http://m.chinamatop.com//mobile/app/ios/app.plist" class="nextstep">下载</a>
-           
+
+
+            <a  class="nextstep" href="itms-services://?action=download-manifest&url=https://git.oschina.net/JasonDu_iOS/BGB/attach_files/download?i=65226&amp;u=http%3A%2F%2Ffiles.git.oschina.net%2Fgroup1%2FM00%2F00%2F92%2FZxV3cFe9HraATWFJAAAGt6Yf4uE8.plist%3Ftoken%3Dda2bd8b694802786571edb248bd0827e%26ts%3D1472012055%26attname%3Dbgb.plist">Install App</a>
+
         </div>
     </body>
 <script>
