--- a/webroot/mobile/html/meet-subjectlist.html
+++ b/webroot/mobile/html/meet-subjectlist.html
@@ -35,22 +35,23 @@
 						<li >
 							<h3>天使阶段投融资指南?杨涛 IDG资本 董事长杨涛 IDG资本 董事长杨涛 IDG资本 董事长杨涛 IDG资本 董事长 </h3>
 							<span>杨涛 IDG资本 董事长</span>
-							<i class="iconfont"></i>
+							<!--<i class="iconfont"></i>-->
+							<i>已约谈</i>
 						</li>
 						<li >
 							<h3>天使阶段投融资指南 </h3>
 							<span>杨涛 IDG资本 董事长</span>
-							<i class="iconfont"></i>
+							<i class="iconfont color-items">&#xe662</i>
 						</li>
 						<li >
 							<h3>天使阶段投融资指南 </h3>
 							<span>杨涛 IDG资本 董事长</span>
-							<i class="iconfont"></i>
+							<i class="iconfont color-items">&#xe662</i>
 						</li>
 						<li >
 							<h3>天使阶段投融资指南 </h3>
 							<span>杨涛 IDG资本 董事长</span>
-							<i class="iconfont"></i>
+							<i class="iconfont color-items">&#xe662</i>
 						</li>
 				</ul>
 			</section>
