--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -57,6 +57,9 @@
     <li onclick="LEMON.share.WB(callback)">LEMON.share.WB(callback) 分享微博</li>
     -->
 
+    <li>
+        <input type="text">
+    </li>
     <li><a href="/">跳资讯  href="/"</a></li>
     <li><a href="http://m.chinamatop.com/">跳资讯  href="http://m.chinamatop.com/"</a></li>
     <li><a href="/news/index?ptag=8">跳资讯  href="/news/index?ptag=8"</a></li>
