--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -58,7 +58,7 @@
     -->
 
     <li>
-        <input type="text">
+        <input type="text" onclick="setTimeout(function(){LEMON.sys.hideKeyboard()}, 2000)" value="setTimeout(function(){LEMON.sys.hideKeyboard()}, 2000)">
     </li>
     <li><a href="/">跳资讯  href="/"</a></li>
     <li><a href="http://m.chinamatop.com/">跳资讯  href="http://m.chinamatop.com/"</a></li>
