--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -57,6 +57,7 @@
     <li onclick="LEMON.share.WB(callback)">LEMON.share.WB(callback) 分享微博</li>
     -->
 
+    <li onclick="alert(document.referrer)">document.referrer</li>
     <li>
         <input type="text" onclick="setTimeout(function(){LEMON.sys.hideKeyboard()}, 2000)" value="setTimeout(function(){LEMON.sys.hideKeyboard()}, 2000)">
     </li>
