--- a/webroot/mobile/font/demo.html
+++ b/webroot/mobile/font/demo.html
@@ -202,6 +202,13 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe680;</i>
+                    <div class="name">收藏</div>
+                    <div class="code">&amp;#xe680;</div>
+                    <div class="fontclass">.shoucang</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe606;</i>
                     <div class="name">置顶</div>
                     <div class="code">&amp;#xe606;</div>
