--- a/webroot/mobile/html/my-customer.html
+++ b/webroot/mobile/html/my-customer.html
@@ -24,25 +24,27 @@
 		
 		<div class="wraper">
 			<div class="inner my-home-menu" >
-				<span class="active">我是顾客</span>
-				<span href="my-expert.html">我是专家</span>
+				<span class="active">我约见</span>
+				<span href="my-expert.html">约见我</span>
 					
 				</div>
 			
 				<div class="inner my-home-slidemenu" >
-					<span class="active">待付款</span>
-					<a href="#this">已确认</a>
-					<!--<a href="#this">已完成</a>-->
+					<span class="active">待付款<i>2</i></span>
+					<a href="#this">已确认<i>2</i></a>
+					<a href="#this">已完成<i>2</i></a>
 				</div>
 			
-			<section class="internet-v-info nopd">
+			<section class="internet-v-info">
+				<!--<span class="m_sign"><i>未读</i></span>-->
 				<div class="innercon">
 					<span class="head-img"><img src="../images/vip.png"/><i></i></span>
 					<div class="vipinfo my-meet-info">
 						<h3>兰启昌<span class="meetnum">12人见过</span></h3>
 						<span class="job">轻客科技&nbsp;&nbsp;市场总监</span>
-						<div class="mark">
-							<a href="#this">约见话题：天使阶段投融资 </a>
+						<div class="mark meet_title_con">
+							<span class="color-items m_sub_title line1">约见话题：天使阶段投融资天使阶段投融资天使阶段投融资天使阶段投融资天使阶段投融资 </span>
+							<em class="meet_tips"><span class="l_tips"></span><i class="iconfont fr">&#xe662;</i></em> 
 						</div>
 					</div>
 				</div>
@@ -53,14 +55,15 @@
 					</div>
 				</div>-->
 			</section>	
-			<section class="internet-v-info nopd">
+			<section class="internet-v-info">
 				<div class="innercon">
 					<span class="head-img"><img src="../images/vip.png"/><i></i></span>
 					<div class="vipinfo my-meet-info">
-						<h3>兰启昌<time>2011-6-18 19:00</time><span class="meetnum">12人见过</span></h3>
+						<h3>兰启昌<span class="meetnum">12人见过</span></h3>
 						<span class="job">轻客科技&nbsp;&nbsp;市场总监</span>
-						<div class="mark">
-							<a href="#this">约见话题：天使阶段投融资 </a>
+						<div class="mark meet_title_con">
+							<span class="color-items m_sub_title line1">约见话题：天使阶段投融资天使阶段投融资天使阶段投融资天使阶段投融资天使阶段投融资 </span>
+							<em class="meet_tips"><span class="l_tips"></span><i class="iconfont fr">&#xe662;</i></em> 
 						</div>
 					</div>
 				</div>
@@ -71,14 +74,15 @@
 					</div>
 				</div>-->
 			</section>	
-			<section class="internet-v-info nopd f-complet">
+			<section class="internet-v-info f-complet">
 				<div class="innercon">
 					<span class="head-img"><img src="../images/vip.png"/><i></i></span>
 					<div class="vipinfo my-meet-info">
 						<h3>兰启昌<span class="meetnum">12人见过</span></h3>
 						<span class="job">轻客科技&nbsp;&nbsp;市场总监</span>
-						<div class="mark">
-							<a href="#this">约见话题：天使阶段投融资 </a>
+						<div class="mark meet_title_con">
+							<span class="color-items m_sub_title line1">约见话题：天使阶段投融资天使阶段投融资天使阶段投融资天使阶段投融资天使阶段投融资 </span>
+							<em class="meet_tips"><span class="l_tips opci"></span><i class="iconfont fr">&#xe662;</i></em> 
 						</div>
 					</div>
 				</div>
