--- a/webroot/mobile/font/demo.html
+++ b/webroot/mobile/font/demo.html
@@ -76,6 +76,13 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe692;</i>
+                    <div class="name">加号</div>
+                    <div class="code">&amp;#xe692;</div>
+                    <div class="fontclass">.jiahao</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe64f;</i>
                     <div class="name">更多</div>
                     <div class="code">&amp;#xe64f;</div>
