--- a/webroot/mobile/html/zt_index.html
+++ b/webroot/mobile/html/zt_index.html
@@ -100,8 +100,8 @@
 			</section>
 			<div style='height:1.2rem;'></div>
 			<div class="fixed-btn">
-			<a href="activity-guest.html" class="l-btn">我要推荐</a>
-			<a href="activity-pay.html" class="r-btn">我要报名(400元)</a>
+			<a href="activity-guest.html" class="l-btn">我要报名</a>
+			<a href="activity-pay.html" class="r-btn">我要投票</a>
 		</div>
 		<div class="zt_tips">
 			<span class="zt_r_closed">&times;</span>
