--- a/webroot/mobile/html/meet.html
+++ b/webroot/mobile/html/meet.html
@@ -95,17 +95,17 @@
 				<div class="m_title_des bd1">
 					<h3>全部会员</h3>
 				</div>
-				
+			<!--修改-->	
 			<section class="internet-v-info">
 				<div class="innercon">
 						<a href="meet-one.html"><span class="head-img"><img src="../images/vip.png"/><i></i></span></a>
 						<div class="vipinfo bd1">
 							<div class="fl c_info_list">
-								<a href="meet-one.html" style="background: red;display: block;">
+								<a href="meet-one.html">
 									<h3><div class="l-name">杨海鼎</div><div class="job line1">执行执行总监执行总监执行总监总监</div></h3>
 									<span class="job">法国凯辉基金</span>
 								</a>
-								<div class="mark line1" style="background: red;">
+								<div class="mark line1" >
 									<a href="#this"><i class="iconfont">&#xe67c;</i>演员的自我修养演员的自我修养演员的自我修养演员的自我修养</a>
 								</div>
 						</div>
@@ -115,9 +115,8 @@
 							<span>已关注</span>
 						</div>
 						</div>
-					
 				</div>
-			</section>
+			</section><!--修改-->
 			<section class="internet-v-info">
 				<div class="innercon">
 						<a href="meet-one.html"><span class="head-img"><img src="../images/vip.png"/><i></i></span></a>
