--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -24,6 +24,7 @@
     <li onclick="alert(LEMON.sys.isUseLOC())">LEMON.sys.isUseLOC(),  //是否使用缓存  on  off</li>
     <li onclick="alert(LEMON.sys.version())">LEMON.sys.version() 当前版本号</li>
     <li onclick="alert(LEMON.sys.device())">LEMON.sys.device() 当前设备id</li>
+    <li onclick="LEMON.sys.clearWebCatch()">LEMON.sys.clearWebCatch()清除web缓存</li>
     <li onclick="LEMON.sys.QRcode()">LEMON.sys.QRcode()扫二维码</li>
     <li onclick="LEMON.sys.mediaPlay()">LEMON.sys.mediaPlay()开始播放多媒体</li>
     <li onclick="LEMON.login.wx(callback)">LEMON.login.wx(callback)</li>
