--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -7,6 +7,7 @@
     <meta name="format-detection" content="email=no" /><!--忽略电话号码和邮箱识别-->
     <title>TEST API</title>
     <script src="/mobile/js/jsapi.js"></script>
+    <script src="/mobile/js/zepto.min.js"></script>
 </head>
 <body>
 <style>
@@ -75,7 +76,20 @@
     </li>
 
     <li><a href="com.chinamatop://main/param?url=http://m.chinamatop.com/activity/index">com.chinamatop://main/param?url=http://m.chinamatop.com/activity/index</a></li>
-
+    <li>
+        <img src=​"/​upload/​banner/​2016-09-22/​57e3ac43b9544.jpg" width="100" height="100" onclick="viewImg(this.src)">​
+        <img src=​"/​upload/​banner/​2016-09-22/​57e3ac3c6526d.jpg" width="100" height="100" onclick="viewImg(this.src)">​
+        <img src=​"/​upload/​banner/​2016-09-26/​57e8818684073.png" width="100" height="100" onclick="viewImg(this.src)">​
+        <img src=​"/​upload/​banner/​2016-09-22/​57e3ac43b9544.jpg" width="100" height="100" onclick="viewImg(this.src)">​
+        <img src=​"/​upload/​banner/​2016-09-22/​57e3ac3c6526d.jpg" width="100" height="100" onclick="viewImg(this.src)">​
+        <script>
+            function viewImg(src){
+                var imgs = [];
+                $('img').each(function(){imgs.push(this.src)});
+                LEMON.event.viewImg(src, imgs);
+            }
+        </script>
+    </li>
 </ul>
 
 <br>
