--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -76,12 +76,13 @@
     </li>
 
     <li><a href="com.chinamatop://main/param?url=http://m.chinamatop.com/activity/index">com.chinamatop://main/param?url=http://m.chinamatop.com/activity/index</a></li>
+
     <li>
-        <img src=​"/​upload/​banner/​2016-09-22/​57e3ac43b9544.jpg" width="100" height="100" onclick="viewImg(this.src)">​
-        <img src=​"/​upload/​banner/​2016-09-22/​57e3ac3c6526d.jpg" width="100" height="100" onclick="viewImg(this.src)">​
-        <img src=​"/​upload/​banner/​2016-09-26/​57e8818684073.png" width="100" height="100" onclick="viewImg(this.src)">​
-        <img src=​"/​upload/​banner/​2016-09-22/​57e3ac43b9544.jpg" width="100" height="100" onclick="viewImg(this.src)">​
-        <img src=​"/​upload/​banner/​2016-09-22/​57e3ac3c6526d.jpg" width="100" height="100" onclick="viewImg(this.src)">​
+        <img src="http://m.chinamatop.com/upload/banner/2016-09-22/57e3ac43b9544.jpg" width="100" height="100" onclick="viewImg(this.src)">​
+        <img src="http://m.chinamatop.com/upload/banner/2016-09-22/57e3ac3c6526d.jpg" width="100" height="100" onclick="viewImg(this.src)">​
+        <img src="http://m.chinamatop.com/upload/banner/2016-09-26/57e8818684073.png" width="100" height="100" onclick="viewImg(this.src)">​
+        <img src="http://m.chinamatop.com/upload/banner/2016-09-22/57e3ac43b9544.jpg" width="100" height="100" onclick="viewImg(this.src)">​
+        <img src="http://m.chinamatop.com/upload/banner/2016-09-22/57e3ac3c6526d.jpg" width="100" height="100" onclick="viewImg(this.src)">
         <script>
             function viewImg(src){
                 var imgs = [];
