--- a/webroot/mobile/app/download.html
+++ b/webroot/mobile/app/download.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
         <title>下载APP</title>
     </head>
     <body>
+    <div style="text-align: center;padding-top: 20px;font-size: 14px">
+        <span>如果没有下载,请在浏览器上打开此页面<br>(点击右上角,使用浏览器打开)</span>
+    </div>
+
     <script>
         if(/iphone|mac|ipod|ipad/i.test(navigator.userAgent.toLocaleLowerCase())){
             location.href = 'https://itunes.apple.com/us/app/bing-gou-bang/id1156402644';
@@ -13,5 +19,6 @@
             location.href = 'http://m.chinamatop.com/mobile/app/bgq.apk';
         }
     </script>
+
     </body>
 </html>
