--- a/webroot/mobile/app/download.html
+++ b/webroot/mobile/app/download.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-        <title>下载APP</title>
+        <title>并购帮APP下载</title>
     </head>
     <body>
     <div style="text-align: center;padding-top: 20px;font-size: 14px">
