--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -47,6 +47,7 @@
     <li onclick="LEMON.sys.update('https://itunes.apple.com/cn/app/che-jing-ling/id1011007241?mt=8')">LEMON.sys.update('test url') 更新ios app</li>
 
     <li onclick="LEMON.share.banner()">LEMON.share.banner() 分享条</li>
+    <li onclick="LEMON.event.unrefresh()">LEMON.event.unrefresh()关闭本页刷新</li>
     <li onclick="LEMON.sys.openLOC()">LEMON.sys.openLOC()开启缓存</li>
     <li onclick="LEMON.sys.closeLOC()">LEMON.sys.closeLOC()关闭缓存</li>
     <li onclick="LEMON.sys.showKeyboard()">LEMON.sys.showKeyboard()显示键盘 </li>
