--- a/webroot/mobile/font/demo.html
+++ b/webroot/mobile/font/demo.html
@@ -195,6 +195,13 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe6a4;</i>
+                    <div class="name">项目</div>
+                    <div class="code">&amp;#xe6a4;</div>
+                    <div class="fontclass">.weibiaoti1</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe606;</i>
                     <div class="name">置顶</div>
                     <div class="code">&amp;#xe606;</div>
