--- a/webroot/mobile/font/demo.html
+++ b/webroot/mobile/font/demo.html
@@ -1014,6 +1014,13 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe6a5;</i>
+                    <div class="name">分享</div>
+                    <div class="code">&amp;#xe6a5;</div>
+                    <div class="fontclass">.fenxiang1</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe680;</i>
                     <div class="name">已关注</div>
                     <div class="code">&amp;#xe680;</div>
