--- a/webroot/mobile/html/my-f-Invoice-pay.html
+++ b/webroot/mobile/html/my-f-Invoice-pay.html
@@ -218,7 +218,102 @@
 			  </div>
 			</div>
 			<div style='height:1.2rem;'></div>
-			
+			<div class='reg-shadow'></div>
+			<div class="invoic_dialog">
+				<div class="dialog_inner">
+				<div class="invoic_dialog_head">
+					<h3>确认发票信息</h3>
+				</div>
+				<div class='invoic_tab'>
+					 <div class="invoic_self_detail bgff border">
+							<div class="innerwaper">
+								<ul>
+									<li class="bd1">
+										<span class="pay_left_block">公司名称</span>
+										<div class="pay_right_info">
+											<input type="text" value="请填写公司名称" readonly="readonly" />
+										</div>
+									</li>
+									<li>
+									<span class="pay_left_block">发票金额</span>
+									<div class="pay_right_info">
+										<i class="color-items">100.00</i>元
+									</div>
+								</li>
+								</ul>
+							</div>
+					</div>
+				</div>
+				<div class="invoic_dialog_footer">
+					<span class="quitbtn">取消</span>
+					<span class="surebtn">确认</span>
+				</div>
+				</div>
+			</div>
+			<!--增值税发票-->
+			<div class="invoic_dialog" style="display: none;">
+				<div class="dialog_inner">
+					
+				
+				<div class="invoic_dialog_head">
+					<h3>确认发票信息</h3>
+				</div>
+				<div class='invoic_tab'>
+				 <div class="invoic_self_detail bgff border">
+							<div class="innerwaper">
+								<ul>
+									<li class="bd1">
+									<span class="pay_left_block">公司名称</span>
+									<div class="pay_right_info">
+										<input type="text" value="深圳市柠檬智慧咨询有限公司" />
+									</div>
+								</li>
+								<li class="bd1">
+									<span class="pay_left_block">纳税人识别号</span>
+									<div class="pay_right_info">
+										<input type="text" value="14325268586546456" />
+									</div>
+								</li>
+								<li class="bd1">
+									<span class="pay_left_block">公司地址</span>
+									<div class="pay_right_info">
+										<input type="text" value="展滔科技大厦C座1F" />
+									</div>
+								</li>
+								<li class="bd1">
+									<span class="pay_left_block">公司电话</span>
+									<div class="pay_right_info">
+										<input type="text" value="0755-28615888" />
+									</div>
+								</li>
+								<li class="bd1">
+									<span class="pay_left_block">开户行</span>
+									<div class="pay_right_info">
+										<input type="text" value="中国工商银行" />
+									</div>
+								</li>
+								<li class="bd1">
+									<span class="pay_left_block">开户账号</span>
+									<div class="pay_right_info">
+										<input type="text" value="6214852445622596" />
+									</div>
+								</li>
+								<li>
+									<span class="pay_left_block">发票金额</span>
+									<div class="pay_right_info">
+										<i class="color-items">100.00</i>元
+									</div>
+								</li>
+								</ul>
+							</div>
+						</div>
+						</div>
+				<div class="invoic_dialog_footer">
+					<span class="quitbtn">取消</span>
+					<span class="surebtn">确认</span>
+				</div>
+			</div>
+			</div>
 				<a href="my_f_invoicepay-success.html" class="f-bottom">提 交</a>
 	 	</div>
 	 	<script type="text/javascript">
