--- a/webroot/mobile/app/download.html
+++ b/webroot/mobile/app/download.html
@@ -5,9 +5,15 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
         <title>并购帮APP下载</title>
+        <style>
+        	html,body{height:100%;font-family: 'STHeiti','Microsoft YaHei',Helvetica,Arial,sans-serif;overflow: hidden;}
+        	*{margin:0;padding:0;}
+        	.download_des{text-align: center;padding-top: 20px;font-size: 14px;background:rgba(0,0,0,.6) url(../css/img/wx-t.png) no-repeat 90% 20px;height:100%}
+        	.download_des span{display: block;font-size: 15px;line-height: 26px;color:#fff;margin-top:200px;}
+        </style>
     </head>
     <body>
-    <div style="text-align: center;padding-top: 20px;font-size: 14px">
+    <div class="download_des">
         <span>如果没有下载,请在浏览器上打开此页面<br>(点击右上角,使用浏览器打开)</span>
     </div>
 
