--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -44,7 +44,7 @@
     <li onclick="LEMON.show.shareIco()">LEMON.show.shareIco()  显示分享图标</li>
     <li onclick="LEMON.sys.back('http://m.chinamatop.com/')">LEMON.sys.back('http://m.chinamatop.com/') 设置点击返回的跳转链接</li>
     <li onclick="LEMON.sys.update('http://m.chinamatop.com/mobile/app/bgq.apk')">LEMON.sys.update('test url') 更新android app</li>
-    <li onclick="LEMON.sys.update('https://itunes.apple.com/cn/app/che-jing-ling/id1011007241?mt=8')">LEMON.sys.update('test url') 更新ios app</li>
+    <li onclick="LEMON.sys.update('https://itunes.apple.com/us/app/bing-gou-bang/id1156402644')">LEMON.sys.update('test url') 跳转ios app</li>
 
     <li onclick="LEMON.share.banner()">LEMON.share.banner() 分享条</li>
     <li onclick="LEMON.event.unrefresh()">LEMON.event.unrefresh()关闭本页刷新</li>
