--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -19,7 +19,7 @@
 					<a href="#this" class="quit_login fr">退出登录</a>
 				</h1>
 				<div class="home_user_info">
-					<span class="imginfo"></span>
+					<span class="imginfo"><img src="../images/tx.png"/></span>
 					<a href="" class="mobilenum">15013797469</a>
 				</div>
 			</div>
