--- a/webroot/mobile/html/jifen/html/login.html
+++ b/webroot/mobile/html/jifen/html/login.html
@@ -30,11 +30,12 @@
 					
 			</div>
 		</div>
-		<!--<script type="text/javascript">
+		<script type="text/javascript">
 		//改变登录按钮颜色
-			$('#username').on('input',function(){
-				$('#loginbtn').addClass('bg_items');
-			})
-		</script>-->
+//			$('#username').on('input',function(){
+//				$('#loginbtn').addClass('bg_items');
+//			})
+		$.func.login();
+		</script>
 	</body>
 </html>
