--- a/webroot/mobile/app/download.html
+++ b/webroot/mobile/app/download.html
@@ -20,7 +20,7 @@
 
     <script>
         if(/iphone|mac|ipod|ipad/i.test(navigator.userAgent.toLocaleLowerCase())){
-            location.href = 'https://itunes.apple.com/us/app/bing-gou-bang/id1156402644';
+            location.href = 'https://itunes.apple.com/us/app/bing-gou-bang/id1156402644?l=zh&ls=1&mt=8';
             document.getElementById('msg').innerHTML='如果iOS10用户跳转失败,请在appstore中搜索"并购帮"';
         }
         else{
