并购帮文字

--- a/webroot/mobile/app/download.html
+++ b/webroot/mobile/app/download.html
@@ -16,7 +16,7 @@
     </head>
     <body>
     <div class="download_des" id="download_des">
-        <span onclick="'https://itunes.apple.com/us/app/bing-gou-bang/id1156402644?l=zh&ls=1&mt=8'">如果没有下载,请在浏览器上打开此页面<br>(点击右上角,使用浏览器打开)<br><br><br><br></span>
+        <span onclick="location.href = 'https://itunes.apple.com/us/app/bing-gou-bang/id1156402644?l=zh&ls=1&mt=8'">如果没有下载,请在浏览器上打开此页面<br>(点击右上角,使用浏览器打开)<br><br><br><br></span>
         <span id="msg"></span>
     </div>
 
