--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -1,117 +1,93 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="format-detection" content="telephone=no, email=no" />
-		<meta name="renderer" content="webkit">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-		<title>积分换-个人主页</title>
-		<link rel="stylesheet" type="text/css" href="../css/basic.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-		<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
-	</head>
-	<body>
-		<header>
-			<div class="inner">
-				<h1 class="home_head">
-					<span class="home_title"></span>
-					<a href="#this" class="quit_login fr">退出登录</a>
-				</h1>
-				<div class="home_user_info">
-					<span class="imginfo"><img src="../images/tx.png"/></span>
-					<a href="" class="mobilenum">15013797469</a>
-				</div>
-			</div>
-		</header>
-		<div class="wraper">
-			<div class="home_item">
-				<div class="itemtitle">
-					<div class="inner clearfix">
-						<span class="fl item_title_r_name">兑换商品</span>
-						<a href="allgoods.html" class="fr color_items more">查看更多</a>
-					</div>
-				</div>
-				<div class="items_con">
-					<dl>
-						<dt><img src="../images/good01.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good01.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good02.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-				</div>
-				<div class="items_con">
-					<dl>
-						<dt><img src="../images/good03.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good04.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good01.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-				</div>
-			</div>
-			<div class="home_infolist mt25 mb10">
-				<a href="integral_query.html" class="ablock">
-					<div class="inner home_top_con clearfix">
-						<span class="home_leftcon fl">积分查询</span>
-						<i class="home_rightico fr"></i>
-					</div>
-				</a>
-			</div>
-			<div class="home_infolist  mb10">
-				<div class="inner home_top_con clearfix" id="exchange">
-					<span class="home_leftcon fl change">兑换</span>
-					<i class="home_rightico fr"></i>
-				</div>
-				<div class="downcon upcon">
-					<div class="changeinfo">
-						<div class="inner">
-							<input type="text" placeholder="输入串码(发送短信可接收串码)" class="point" />
-							<a href="choose_good.html" class="submitbtn">提交</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="home_infolist mb10">
-				<a href="order_query.html" class="ablock">
-					<div class="inner home_top_con clearfix">
-						<span class="home_leftcon fl bind">查询绑定</span>
-						<i class="home_rightico fr"></i>
-					</div>
-				</a>
-			</div>
-			<!--<div style="height:50px;"></div>-->
-				
-		</div>
-		<!--<div class="tips">
-			<div class="tips_des">
-				<h1>兑换失败</h1>
-				<p>请重新发送短信</p>
-				<span class="closed"></span>
-			</div>
-		</div>-->
-		<script type="text/javascript">
-			$('#exchange').on('tap',function(){
-				$(this).toggleClass('current');
-				$('.downcon').toggleClass('upcon');
-			})
-		</script>
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="format-detection" content="telephone=no, email=no" />
+        <meta name="renderer" content="webkit">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <title>积分换-个人主页</title>
+        <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/style.css"/>
+        <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../js/style.js" type="text/javascript" charset="utf-8"></script>
+    </head>
+    <body>
+        <header>
+            <div class="inner">
+                <h1 class="home_head">
+                    <span class="home_title"></span>
+                    <a href="#this" class="quit_login fr">退出登录</a>
+                </h1>
+                <div class="home_user_info">
+                    <span class="imginfo"><img src="../images/tx.png" id="avatar"/></span>
+                    <a href="javascript:void(0)" class="mobilenum" id="nickName">15013797469</a>
+                </div>
+            </div>
+        </header>
+        <div class="wraper">
+            <div class="home_item">
+                <div class="itemtitle">
+                    <div class="inner clearfix">
+                        <span class="fl item_title_r_name">兑换商品</span>
+                        <a href="allgoods.html" class="fr color_items more">查看更多</a>
+                    </div>
+                </div>
+                <div class="items_con">
+                    <a href="allgoods.html" id="product"></a>
+                </div>
+            </div>
+            <div class="home_infolist mt25 mb10">
+                <div class="inner home_top_con clearfix" id="exchange">
+                    <span class="home_leftcon fl change">兑换</span>
+                </div>
+                <div class="downcon">
+                    <div class="changeinfo">
+                        <div class="inner">
+                            <input type="text" placeholder="输入串码(发送短信可接收串码)" class="point" name="" />
+                            <a href="choose_good.html" class="submitbtn" onClick="javascript:$.func">提交</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="home_infolist  mb10">
+                <a href="integral_query.html" class="ablock">
+                    <div class="inner home_top_con clearfix">
+                        <span class="home_leftcon fl">积分查询</span>
+                        <i class="home_rightico fr"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="home_infolist mb10">
+                <a href="order_query.html" class="ablock">
+                    <div class="inner home_top_con clearfix">
+                        <span class="home_leftcon fl bind">查询绑定</span>
+                        <i class="home_rightico fr"></i>
+                    </div>
+                </a>
+            </div>
+            <!--<div style="height:50px;"></div>-->
+
+        </div>
+        <!--<div class="tips">
+                <div class="tips_des">
+                        <h1>兑换失败</h1>
+                        <p>请重新发送短信</p>
+                        <span class="closed"></span>
+                </div>
+        </div>-->
+        <script type="text/html" id="tpl">
+            <dl>
+                <dt><img src="{#img#}"/></dt>
+                <dd class="items_price">￥ {#exchangePrice#}</dd>
+                <dd>{#productName#}</dd>
+            </dl>
+        </script>
+        <script type="text/javascript">
+            $('#nickName').html($.func.getCookie('nickName'));
+            var src = $.func.getCookie('headImgUrl') === null ? $.func.getCookie('headImgUrl') : '../images/tx.png';
+            $('#avatar').attr('src', src);
+            $.func.homePageProduct();
+        </script>
+    </body>
 </html>
