--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -40,14 +40,10 @@
             <div class="home_infolist mt25 mb10">
                 <div class="inner home_top_con clearfix" id="exchange">
                     <span class="home_leftcon fl change">兑换</span>
+                     <div class="changeinfo fr">
+                        <input type="text" placeholder="输入串码(发送短信可接收串码)" class="point" name="" />
+                        <a href="choose_good.html" class="submitbtn" onClick="javascript:$.func">提交</a>
                 </div>
-                <div class="downcon">
-                    <div class="changeinfo">
-                        <div class="inner">
-                            <input type="text" placeholder="输入串码(发送短信可接收串码)" class="point" name="" />
-                            <a href="choose_good.html" class="submitbtn" onClick="javascript:$.func">提交</a>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="home_infolist  mb10">
