--- a/webroot/mobile/html/jifen/html/allgoods.html
+++ b/webroot/mobile/html/jifen/html/allgoods.html
@@ -1,96 +1,55 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="format-detection" content="telephone=no, email=no" />
-		<meta name="renderer" content="webkit">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-		<title>积分换-全部商品</title>
-		<link rel="stylesheet" type="text/css" href="../css/basic.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-		<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
-	</head>
-	<body>
-		<header>
-			<div class="inner">
-				<h1 class="logintitle">全部商品</h1>
-			</div>
-		</header>
-		<div class="wraper">
-			
-			<div class="home_item btop mt10">
-				<div class="items_con">
-					<dl>
-						<dt><img src="../images/good01.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good02.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good03.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-				</div>
-				<div class="items_con">
-					<dl>
-						<dt><img src="../images/good04.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good01.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good03.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-				</div>
-				<div class="items_con">
-					<dl>
-						<dt><img src="../images/good04.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good01.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good01.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-				</div>
-				<div class="items_con">
-					<dl>
-						<dt><img src="../images/good01.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good01.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-					<dl>
-						<dt><img src="../images/good01.png"/></dt>
-						<dd class="items_price">￥ 20.00</dd>
-						<dd>浮里森林蛋糕劵</dd>
-					</dl>
-				</div>
-			</div>
-			
-		</div>
-		
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="format-detection" content="telephone=no, email=no" />
+        <meta name="renderer" content="webkit">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <title>积分换-全部商品</title>
+        <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/style.css"/>
+        <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../js/style.js" type="text/javascript" charset="utf-8"></script>
+    </head>
+    <body>
+        <header>
+            <div class="inner">
+                <h1 class="logintitle">全部商品</h1>
+            </div>
+        </header>
+        <div class="wraper">
+            <div class="home_item btop mt10">
+                <div class="items_con">
+                    <a href="choose_good.html" id="allGoods"></a>
+                </div>
+            </div>
+        </div>
+        <script type="text/html" id="tpl">
+            <dl>
+                <dt><img src="{#img#}"/></dt>
+                <dd class="items_price">￥ {#exchangePrice#}</dd>
+                <dd>{#productName#}</dd>
+            </dl>
+        </script>
+        <script>
+            var page = 1;
+            if($.func.getProducts(page) === false) page = 9999;
+            $(window).on("scroll", function () {
+                if(window.holdLoad) return;
+                window.holdLoad = true;
+                var st = document.body.scrollTop;
+                if (st >= (($(document).height() - $(window).height()) - 300)) {
+                    if(page === 9999){
+                        return false;
+                    }
+                    page++;
+                    if($.func.getProducts(page) === false) page = 9999;
+                }
+                else{
+                    window.holdLoad = false;
+                }
+            });
+        </script>
+    </body>
 </html>
