--- a/webroot/mobile/html/jifen/html/order_query.html
+++ b/webroot/mobile/html/jifen/html/order_query.html
@@ -1,67 +1,70 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="format-detection" content="telephone=no, email=no" />
-		<meta name="renderer" content="webkit">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-		<title>订单查询</title>
-		<link rel="stylesheet" type="text/css" href="../css/basic.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-	</head>
-	<body>
-		<header>
-			<div class="inner">
-				<h1 class="logintitle">订单查询</h1>
-				<div class="order_total">
-					<span><i>20</i>订单总计 ( 笔 )</span>
-					<span><i>10000.00</i>总计金额 ( 元 )</span>
-				</div>
-			</div>
-		</header>
-		<div class="wraper mt8">
-			<ul class="order_detail_item">
-				<li>
-					<div class="order_l_pic">
-						<img src="../images/choose04.png" alt="" />
-					</div>
-					<div class="order_r_box">
-						<div class="l_order_des">
-							<h3>爱奇艺会员一个月</h3>
-							<span>虚拟货币 &nbsp;&nbsp;: <i class="color_org">￥ 15.00</i></span>
-							<span>订单状态 &nbsp;&nbsp;: <i class="color_org">已完成</i></span>
-							<span>订单日期  &nbsp;&nbsp;: <i class="color_gray">2016-10-20</i></span>
-						</div>
-					</div>
-				</li>
-				<li>
-					<div class="order_l_pic">
-						<img src="../images/choose04.png" alt="" />
-					</div>
-					<div class="order_r_box">
-						<div class="l_order_des">
-							<h3>爱奇艺会员一个月</h3>
-							<span>虚拟货币 &nbsp;&nbsp;: <i class="color_org">￥ 15.00</i></span>
-							<span>订单状态 &nbsp;&nbsp;: <i class="color_org">已完成</i></span>
-							<span>订单日期  &nbsp;&nbsp;: <i class="color_gray">2016-10-20</i></span>
-						</div>
-					</div>
-				</li>
-				<li>
-					<div class="order_l_pic">
-						<img src="../images/choose04.png" alt="" />
-					</div>
-					<div class="order_r_box">
-						<div class="l_order_des">
-							<h3>爱奇艺会员一个月</h3>
-							<span>虚拟货币 &nbsp;&nbsp;: <i class="color_org">￥ 15.00</i></span>
-							<span>订单状态 &nbsp;&nbsp;: <i class="color_org">已完成</i></span>
-							<span>订单日期  &nbsp;&nbsp;: <i class="color_gray">2016-10-20</i></span>
-						</div>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="format-detection" content="telephone=no, email=no" />
+        <meta name="renderer" content="webkit">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <title>订单查询</title>
+        <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/style.css"/>
+        <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../js/style.js" type="text/javascript" charset="utf-8"></script>
+    </head>
+    <body>
+        <header>
+            <div class="inner">
+                <h1 class="logintitle">订单查询</h1>
+                <div class="order_total">
+                    <span><i id="totalOrders">0</i>订单总计 ( 笔 )</span>
+                    <span><i id="totalMoney">0</i>总计金额 ( 元 )</span>
+                </div>
+            </div>
+        </header>
+        <div class="wraper mt8">
+            <ul class="order_detail_item" id="order">
+            </ul>
+        </div>
+        <script type="text/html" id="tpl">
+        <li>
+            <div class="order_l_pic">
+                <img src="{#img#}" alt="" />
+            </div>
+            <div class="order_r_box">
+                <div class="l_order_des">
+                    <h3>{#productName#}</h3>
+                    <span>虚拟货币 &nbsp;&nbsp;: <i class="color_org">￥ {#price#}</i></span>
+                    <span>订单状态 &nbsp;&nbsp;: <i class="color_org">{#order_status#}</i></span>
+                    <span>订单日期  &nbsp;&nbsp;: <i class="color_gray">{#orderTime#}</i></span>
+                </div>
+            </div>
+        </li>
+    </script>
+    <script type="text/html" id="noOrder">
+        <div class="inner noorder_tips">
+            <div class="noorder"></div>
+            <p>抱歉!没有订单信息</p>
+        </div>
+    </script>
+    <script>
+        var page = 1;
+        if($.func.getOrders(page) === false) page = 9999;
+        $(window).on("scroll", function () {
+            if(window.holdLoad) return;
+            window.holdLoad = true;
+            var st = document.body.scrollTop;
+            if (st >= (($(document).height() - $(window).height()) - 300)) {
+                if(page === 9999){
+                    return false;
+                }
+                page++;
+                if($.func.getOrders(page) === false) page = 9999;
+            }
+            else{
+                window.holdLoad = false;
+            }
+        });
+    </script>
+</body>
 </html>
